[gd_scene load_steps=23 format=3 uid="uid://cux2yq5vrwnck"]

[ext_resource type="Script" uid="uid://ucua3301rx7f" path="res://character_body_2d.gd" id="1_dtqjt"]
[ext_resource type="PackedScene" uid="uid://c7rsvrxnevbve" path="res://AssaultRifle.tscn" id="2_5ncpa"]
[ext_resource type="PackedScene" uid="uid://uj72xmt2oulj" path="res://Pistol.tscn" id="3_wi0c6"]
[ext_resource type="Texture2D" uid="uid://v3lybqdtrxop" path="res://Player_Knight_SpriteSheet.png" id="4_hp6x6"]
[ext_resource type="Script" uid="uid://bugkk0ai814be" path="res://sub_viewport.gd" id="5_3tkgg"]
[ext_resource type="Script" uid="uid://bijxf072m2qgh" path="res://Camera2DPlayer.gd" id="6_5ncpa"]
[ext_resource type="Shader" uid="uid://b0uwsb0g0w7rj" path="res://Fog.gdshader" id="6_l6ohk"]
[ext_resource type="Script" uid="uid://dbhcmah4jmbm" path="res://color_rect.gd" id="7_oudfo"]
[ext_resource type="PackedScene" uid="uid://ciaves0vvj80b" path="res://knife.tscn" id="9_wi0c6"]
[ext_resource type="PackedScene" uid="uid://6vhg88ke8rs2" path="res://WunderWaffe.tscn" id="10_hp6x6"]
[ext_resource type="FontFile" uid="uid://civxphdutf8vj" path="res://Font/Creepster-Regular.ttf" id="11_3tkgg"]
[ext_resource type="AudioStream" uid="uid://djxuy7wm5r3ts" path="res://Audio/Call Of Duty - Black Ops 2 _ Zombie Death Song - TranZit.mp3" id="12_l6ohk"]
[ext_resource type="AudioStream" uid="uid://dldw3ivjyli87" path="res://Audio/Owch!.wav" id="13_oudfo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d6rpx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kdubu"]
atlas = ExtResource("4_hp6x6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d21ai"]
atlas = ExtResource("4_hp6x6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj586"]
atlas = ExtResource("4_hp6x6")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d7sh"]
atlas = ExtResource("4_hp6x6")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir8iy"]
atlas = ExtResource("4_hp6x6")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqns4"]
atlas = ExtResource("4_hp6x6")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_r3kul"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdubu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d21ai")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj586")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d7sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir8iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqns4")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jatw7"]
shader = ExtResource("6_l6ohk")
shader_parameter/player_screen_pos = Vector2(0, 0)
shader_parameter/viewport_size = Vector2(0, 0)
shader_parameter/facing = Vector2(1, 0)
shader_parameter/inner_radius = 350.0
shader_parameter/outer_radius = 600.0
shader_parameter/half_angle = 0.8
shader_parameter/cone_softness = 0.25
shader_parameter/aura_inner = 60.0
shader_parameter/aura_outer = 120.0
shader_parameter/aura_strength = 0.35

[node name="Player" type="CharacterBody2D"]
position = Vector2(-454, 74)
script = ExtResource("1_dtqjt")
KnifeCooldown = 0.5
Dosh = 100000000
metadata/NoFog = false
metadata/Shop = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_d6rpx")

[node name="PlrCam" type="Camera2D" parent="."]
z_index = 2
zoom = Vector2(2, 2)
position_smoothing_speed = 15.0
script = ExtResource("6_5ncpa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_r3kul")
animation = &"Move"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
z_index = 5
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -350.0
offset_bottom = 350.0
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
canvas_cull_mask = 4294966279
size = Vector2i(350, 350)
render_target_update_mode = 4
script = ExtResource("5_3tkgg")

[node name="Camera2D" type="Camera2D" parent="CanvasLayer/SubViewportContainer/SubViewport"]
position = Vector2(10, -67)
zoom = Vector2(0.1, 0.1)

[node name="Line2D" type="Line2D" parent="CanvasLayer/SubViewportContainer"]
points = PackedVector2Array(8, 0, -1, 328, 342, 331, 345, 6, 8, 0)

[node name="FlashlightRect" type="ColorRect" parent="CanvasLayer"]
visible = false
z_index = 3
material = SubResource("ShaderMaterial_jatw7")
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)
script = ExtResource("7_oudfo")
player_path = NodePath("../..")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
z_index = 7
offset_left = 2.0
offset_right = 641.0
offset_bottom = 40.0
text = "ewererer"

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer"]
z_index = 5
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -243.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
text = "fdf"

[node name="Description" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Frame" type="ColorRect" parent="CanvasLayer/Description"]
z_index = 4096
layout_mode = 0
offset_left = 99.0
offset_top = 36.0
offset_right = 350.0
offset_bottom = 446.0
color = Color(0, 0, 0, 1)

[node name="Name" type="Label" parent="CanvasLayer/Description/Frame"]
z_index = 4096
layout_mode = 0
offset_left = 82.0
offset_top = 3.0
offset_right = 172.0
offset_bottom = 45.0
text = "AR"

[node name="Description" type="Label" parent="CanvasLayer/Description/Frame"]
z_index = 4096
layout_mode = 0
offset_left = 5.0
offset_top = 199.0
offset_right = 95.0
offset_bottom = 241.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Description/Frame"]
z_index = 4096
position = Vector2(127, 127)

[node name="Cost" type="Label" parent="CanvasLayer/Description/Frame"]
layout_mode = 0
offset_left = 42.0
offset_top = 356.0
offset_right = 123.0
offset_bottom = 442.0

[node name="WeaponUI" type="Label" parent="CanvasLayer"]
z_index = 4096
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -230.0
offset_right = 256.0
offset_bottom = -89.0
grow_vertical = 0

[node name="Gun" type="Sprite2D" parent="CanvasLayer/WeaponUI"]
z_index = 1000
position = Vector2(90, 90)

[node name="Ammo" type="Label" parent="CanvasLayer/WeaponUI"]
z_index = 4096
layout_mode = 0
offset_top = 164.0
offset_right = 40.0
offset_bottom = 187.0
scale = Vector2(4.32, 2.72)

[node name="Weapons" type="Node2D" parent="."]

[node name="AssaultRifle" parent="Weapons" instance=ExtResource("2_5ncpa")]
z_index = 2

[node name="Knife" parent="Weapons" instance=ExtResource("9_wi0c6")]
z_index = 2

[node name="Pistol" parent="Weapons" instance=ExtResource("3_wi0c6")]
z_index = 2

[node name="WunderWaffe" parent="Weapons" instance=ExtResource("10_hp6x6")]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer2"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5.83582, 3.32763)
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("11_3tkgg")
text = "GAME OVER"

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_l6ohk")

[node name="Owch!" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_oudfo")
